# cw_5_postgres

./: .gitignore  README.md  api_class.py  config.py  database_class.py  main.py  pyproject.toml  utils.py
